--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.11.5"
+boto3 = "^1.35.4"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
